# ros2_orange

./: .gitignore  .gitmodules  README.md  control.py  frames_2025-05-26_20.24.11.gv  frames_2025-05-27_16.51.14.gv
src/mpu_pub/: CMakeLists.txt  setup.py
src/mpu_pub/config/: ekf.yaml  ukf.yaml
src/mpu_pub/launch/: ekf.launch.py  ekf2.launch.py  ekf_launch.py  orange.launch.py  ukf.launch.py
src/mpu_pub/mpu_pub/: cog_calc.py  cog_calc2.py  cog_calc3.py  cog_calc4.py  cpg_calc3.py  data_calibrated_mpu.py  data_calibrated_mpu_just_offset.py  efkEstimator_complementaryFilter.py  efk_estimator.py  efk_estimator_double.py  imu_bridge.py  motor_subscriber.py  motor_subscriber2.py  motor_subscriber_2.py  mpu_publisher.py  mpu_subscriber.py  particle_filter.py  ukf_estimator.py  ukf_estimator2.py  ukf_estimator_pf.py
src/quadruped_arm_motion/: CMakeLists.txt  package.xml  setup.py
src/quadruped_arm_motion/config/: controllers.yaml
src/quadruped_arm_motion/launch/: camera_detection_launch.py  control_launch.py  controllers_launch.py  display.launch.py  orange_pi_launch.py  simulation_dynamic_force_launch.py  simulation_dynamic_launch.py  simulation_launch.py
src/quadruped_arm_motion/meshes/: Body.stl  Bodyw.stl  M0.stl  arm_200.stl  arm_250_v1_1.stl  arm_300_v1_1.stl  big_servo.stl  foot.stl  foot_2.stl  foot_3.stl  muslo.stl  quadruped_arm_robot_control_real_effort_Connector_1_respondable_coll_1.dae  quadruped_arm_robot_control_real_effort_Motor_square_visual_vis_1.dae  servo.stl  servo_2.stl  servo_3y.stl  servo_4y.stl  servo_7y.stl  servo_8y.stl  small_servo.stl
src/quadruped_arm_motion/quadruped_arm_motion/: dynamic_simulation.py  echo_effort.py  ik_trigger_node.py  ik_trigger_node2.py  motor_control.py  motor_subscriber.py  tag_pose_extractor.py  trayectory_planning.py
src/quadruped_arm_motion/simulation/: analsis_Ik.py  robot.ino  robot.py  robot_ikpy.py
src/quadruped_arm_motion/urdf/: quadruped_arm.urdf  quadruped_arm_robot_Control_effort.urdf  quadruped_arm_robot_control_real_effort.urdf  (+4 more)
(+35 files in other folders)
