<?xml version="1.0"?>
<package format="3">
  <name>quadruped_arm_motion</name>
  <version>0.0.0</version>
  <description>Quadruped arm motion package</description>

  <maintainer email="felipe.porras.014@gmail.com">edipo</maintainer>
  <license>TODO: License declaration</license>
 <depend>robot_interfaces</depend>
  <!-- Declare build and exec dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>rviz2</build_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
